adding users works!

--- a/the-tea-project-2/src/main/resources/application.yml
+++ b/the-tea-project-2/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9090
+  port: 5555
   
 spring:
   datasource:
-    url: jdbc:postgresql://djscubed.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/postgres
+    url: jdbc:postgresql://djscubed.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/DJS3
     username: rootadmin
     password: coff33saves
     driver-class-name: org.postgresql.Driver
