--- a/SocialNetworkV1/package.json
+++ b/SocialNetworkV1/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~11.0.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "lib": "^4.3.0",
+    "ngx-cookie-service": "^11.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
