--- a/the-tea-project-2/src/main/resources/application.yml
+++ b/the-tea-project-2/src/main/resources/application.yml
@@ -3,11 +3,12 @@ server:
   
 spring:
   datasource:
-    url: jdbc:postgresql://djscubed.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/DJS3
+    url: jdbc:postgresql://djscubed.cqb6pzj3paxs.us-east-2.rds.amazonaws.com:5432/DJS3?currentSchema=public
     username: rootadmin
     password: coff33saves
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect  
     show-sql: true  
+    
     
