--- a/the-tea-project-2(newsiera)/bin/pom.xml
+++ b/the-tea-project-2(newsiera)/bin/pom.xml
@@ -62,7 +62,12 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.926</version>
 		</dependency>
 	</dependencies>
 
