--- a/the-tea-project-2(newsiera)/src/main/resources/application.yml
+++ b/the-tea-project-2(newsiera)/src/main/resources/application.yml
@@ -9,6 +9,19 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect  
-    show-sql: true  
+    show-sql: true 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: theteabydjs3@gmail.com
+    password: coff33saves
+    properties:      mail:
+        smtp: 
+          auth: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+          starttls:
+            enable: true
     
     
