--- a/SocialNetworkV1/angular.json
+++ b/SocialNetworkV1/angular.json
@@ -21,7 +21,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/the tea.jpg"
             ],
             "styles": [
               "src/styles.css",
